Bug 928876 - Inappropriate line break in tabzilla for some locales

--- a/media/css/tabzilla/tabzilla.less
+++ b/media/css/tabzilla/tabzilla.less
@@ -167,7 +167,7 @@
     float: left;
     display: inline;
     width: 620px;
-    margin: 0 10px;
+    margin: 20px 10px 0;
 }
 
 #tabzilla-promo .snippet h4 {
@@ -196,15 +196,21 @@
     float: left;
     display: inline;
     list-style-type: none;
-    width: 17%;
-    margin: 40px 3% 0 -1px;
-    padding: 0;
+    width: 22%;
+    margin: 0 -1px 0 1%;
+    padding: 0 0 0 3%;
     line-height: 1.1;
-    border-right: 1px dotted #ccc;
+    border-left: 1px dotted #ccc;
 }
 
 * html #tabzilla-panel #tabzilla-nav ul li {
     margin-right: 10px; // IE6 width oddity workaround
+}
+
+#tabzilla-panel #tabzilla-nav ul li#tabzilla-nav-mozilla {
+    margin-left: 0;
+    border-left: 0 none;
+    padding-left: 0;
 }
 
 #tabzilla-panel #tabzilla-nav ul li ul li {
@@ -212,12 +218,13 @@
     margin: 0;
     height: auto;
     border: 0;
+    padding: 0;
 }
 
 #tabzilla-panel #tabzilla-nav a {
     color: #484848;
     display: block;
-    padding: .4em 20px .4em 0;
+    padding: .4em 0;
     outline: 0;
 }
 
@@ -234,60 +241,86 @@
 }
 
 #tabzilla-panel #tabzilla-nav ul li#tabzilla-search {
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    float: none;
+    clear: both;
+    width: 100%;
+    margin: 10px 0 0;
     border: 0;
+    padding: 0;
+
+    li {
+        float: left;
+        display: inline;
+        width: 22%;
+        margin: 5px 4% 5px -1px;
+        padding: 0;
+        line-height: 15px;
+    }
+
+    li#tabzilla-search-form-outer {
+        margin: 0;
+        padding: 0;
+        width: 48%;
+        height: auto;
+    }
+
+    a {
+        padding: 0;
+    }
+
+    input {
+        width: 96.5%;
+        background: #fafafa;
+        color: #484848;
+        border: 1px solid #ddd;
+        -moz-border-radius: 6px;
+        -webkit-border-radius: 6px;
+        border-radius: 6px;
+        -moz-box-shadow: 0 0 0 3px rgba(0,0,0,.02) inset;
+        -webkit-box-shadow: 0 0 0 3px rgba(0,0,0,.02) inset;
+        box-shadow: 0 0 0 3px rgba(0,0,0,.02) inset;
+        -webkit-appearance: none;
+        padding: 4px;
+        -moz-transition: all .2s linear;
+        -webkit-transition: all .2s linear;
+        transition: all .2s linear;
+        font-size: 12px;
+    }
+
+    input:hover {
+        border-color: #ccc;
+    }
+
+    input:focus {
+        outline: 0;
+        border-color: #999;
+    }
+
+    input::-webkit-input-placeholder {
+        color: #ddd;
+    }
+
+    input:-moz-placeholder {
+        color: #ddd;
+    }
+
+    label {
+        position:absolute;
+        left:-10000px;
+        top:auto;
+        width:1px;
+        height:1px;
+        overflow:hidden;
+    }
 }
 
-#tabzilla-panel #tabzilla-nav ul li#tabzilla-search a {
-    padding-top: 0;
-}
-
-#tabzilla-panel #tabzilla-nav ul li#tabzilla-search form  {
-    margin: .4em 20px .4em 0;
-}
-
-#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input {
-    width: 90px;
-    background: #fafafa;
-    color: #484848;
-    border: 1px solid #ddd;
-    -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
-    border-radius: 6px;
-    -moz-box-shadow: 0 0 0 3px rgba(0,0,0,.02) inset;
-    -webkit-box-shadow: 0 0 0 3px rgba(0,0,0,.02) inset;
-    box-shadow: 0 0 0 3px rgba(0,0,0,.02) inset;
-    -webkit-appearance: none;
-    padding: 4px;
-    -moz-transition: all .2s linear;
-    -webkit-transition: all .2s linear;
-    transition: all .2s linear;
-    font-size: 12px;
-}
-
-#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input:hover {
-    border-color: #ccc;
-}
-
-#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input:focus {
-    outline: 0;
-    border-color: #999;
-}
-
-#tabzilla-search label{
-    position:absolute;
-    left:-10000px;
-    top:auto;
-    width:1px;
-    height:1px;
-    overflow:hidden;
-}
-.html-rtl #tabzilla-search label{
+.html-rtl #tabzilla-search label {
     left:auto;
     right:-10000px;
 }
-
-#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input::-webkit-input-placeholder { color: #ddd; }
-#tabzilla-panel #tabzilla-nav ul li#tabzilla-search input:-moz-placeholder           { color: #ddd; }
 
 // Firefox Flicks Promo
 
@@ -383,11 +416,8 @@ html[lang=ru] {
     }
 
     #tabzilla-panel #tabzilla-nav {
+        margin: 20px 0;
         width: 100%;
-    }
-
-    #tabzilla-panel #tabzilla-nav ul li {
-        margin-bottom: 40px;
     }
 
 }
